--- a/bin/main/templates/will/edit.html
+++ b/bin/main/templates/will/edit.html
@@ -15,7 +15,7 @@
          <div class="form-group row">
             <label for="inputTitle" class="col-sm-2 col-form-label"><strong>아이디</strong></label>
             <div class="col-sm-4">
-                <input type="text" name="id" class="form-control" id="inputTitle" th:value="${post.id}" readonly>
+                <input type="text" name="id" class="form-control" id="inputTitle" th:value="${post.memberId}" readonly>
             </div>
         </div>
         <div class="form-group row">
@@ -46,6 +46,7 @@
                     <a class="card-text" th:href="@{'/download/' + ${post.fileId}}" th:text="${file.origFilename}"></a>
                     <a class="card-text" th:herf="@{'/edit/' + ${file.id}}"><img src="/images/xbutton.png" alt="로드불가" height="10px" width="10px"/></a>
                 </div>
+                
             </div>
         </div>
         <div class="row">
@@ -55,7 +56,6 @@
                 <a class="btn btn-primary" th:href="@{/user/will/list}" role="button">취소</a>
             </div>
         </div>
-        
     </form>
 </div>
 <footer th:insert="com/footer.html"></footer>
