--- a/src/main/resources/static/css/createwill.css
+++ b/src/main/resources/static/css/createwill.css
@@ -1,88 +1,129 @@
 @charset "UTF-8";
 body {
-	margin:10px;
+   margin:10px;
 }
 .where {
-	display:block;
-	margin:25px 15px;
-	font-size:11px;
-	color:#000;
-	text-decoration:none;
-	font-family:verdana;
-	font-style:italic;
+   display:block;
+   margin:25px 15px;
+   font-size:11px;
+   color:#000;
+   text-decoration:none;
+   font-family:verdana;
+   font-style:italic;
 }
 .filebox input[type="file"] {
-	position:absolute;
-	width:1px;
-	height:1px;
-	padding:0;
-	margin:-1px;
-	overflow:hidden;
-	clip:rect(0,0,0,0);
-	border:0;
+   position:absolute;
+   width:1px;
+   height:1px;
+   padding:0;
+   margin:-1px;
+   overflow:hidden;
+   clip:rect(0,0,0,0);
+   border:0;
 }
 .filebox label {
-	display:inline-block;
-	padding:.5em .75em;
-	color:#999;
-	font-size:inherit;
-	line-height:normal;
-	vertical-align:middle;
-	background-color:#fdfdfd;
-	cursor:pointer;
-	border:1px solid #ebebeb;
-	border-bottom-color:#e2e2e2;
-	border-radius: .25em;
+   display:inline-block;
+   padding:.5em .75em;
+   color:#999;
+   font-size:inherit;
+   line-height:normal;
+   vertical-align:middle;
+   background-color:#fdfdfd;
+   cursor:pointer;
+   border:1px solid #ebebeb;
+   border-bottom-color:#e2e2e2;
+   border-radius: .25em;
 }
 /* named upload */
 .filebox .upload-name {
-	display:inline-block;
-	padding:.5em .75em;
-	font-size:inherit;
-	font-family:inherit;
-	line-height:normal;
-	vertical-align:middle;
-	background-color:#f5f5f5;
-	border:1px solid #ebebeb;
-	border-bottom-color:#e2e2e2;
-	border-radius:.25em;
-	-webkit-appearance:none;
-	/* 네이티브 외형 감추기 */
-	-moz-appearance:none;
-	appearance:none;
+   display:inline-block;
+   padding:.5em .75em;
+   font-size:inherit;
+   font-family:inherit;
+   line-height:normal;
+   vertical-align:middle;
+   background-color:#f5f5f5;
+   border:1px solid #ebebeb;
+   border-bottom-color:#e2e2e2;
+   border-radius:.25em;
+   -webkit-appearance:none;
+   /* 네이티브 외형 감추기 */
+   -moz-appearance:none;
+   appearance:none;
 }
 /* imaged preview */
 .filebox .upload-display {
-	margin-bottom:5px;
+   margin-bottom:5px;
 }
 @media(min-width:768px) {
-	.filebox .upload-display {
-		display:inline-block;
-		margin-right:5px;
-		margin-bottom:0;
-	}
+   .filebox .upload-display {
+      display:inline-block;
+      margin-right:5px;
+      margin-bottom:0;
+   }
 }
 .filebox .upload-thumb-wrap {
-	display:inline-block;
-	width:54px;
-	padding:2px;
-	vertical-align:middle;
-	border:1px solid #ddd;
-	border-radius:5px;
-	background-color:#fff;
+   display:inline-block;
+   width:54px;
+   padding:2px;
+   vertical-align:middle;
+   border:1px solid #ddd;
+   border-radius:5px;
+   background-color:#fff;
 }
 .filebox .upload-display img {
-	display:block;
-	max-width:100%;
-	width:100% \9;
-	height:auto;
+   display:block;
+   max-width:100%;
+   width:100% \9;
+   height:auto;
 }
 .filebox.bs3-primary label {
-	color:#fff;
-	background-color:#337ab7;
-	border-color:#2e6da4;
+   color:#fff;
+   background-color:#337ab7;
+   border-color:#2e6da4;
 }
 #title {
-		font-weight: 10000px;
+      font-weight: 10000px;
 }
 
+.animationbutton {
+    background: #80cbc4;
+    color: #fff;
+    border: none;
+    position: relative;
+    height: 60px;
+    cursor: pointer;
+    transition: 800ms ease all;
+    outline: none;
+    margin-left: 270px;
+}
+
+.animationbutton:hover {
+    background: #fff;
+    color: #1AAB8A;
+}
+
+.animationbutton:before,
+.animationbutton:after {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    height: 2px;
+    width: 0;
+    background: #1AAB8A;
+    transition: 400ms ease all;
+}
+
+.animationbutton:after {
+    right: inherit;
+    top: inherit;
+    left: 0;
+    bottom: 0;
+}
+
+.animationbutton:hover:before,
+.animationbutton:hover:after {
+    width: 100%;
+    transition: 800ms ease all;
+}
