--- a/src/main/resources/templates/logintool/searchPass.html
+++ b/src/main/resources/templates/logintool/searchPass.html
@@ -1,50 +1,52 @@
 <!DOCTYPE html>
- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.6.9/sweetalert2.min.css">
- <script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.6.9/sweetalert2.min.js"></script><html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<link href="../static/css/sweetaler2.mis.css" rel="stylesheet" th:href="@{/css/sweetaler2.mis.css}"/>
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.6.9/sweetalert2.min.js"></script>
+ <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 </head>
 <body>
-<div th:insert="com/header.html" ></div>
+<div th:insert="com/header2.html" ></div>
+
  
-	<div class="container-login100">
-		<div class="wrap-login100 p-l-55 p-r-55 p-t-50 p-b-30">
-			<form th:action="@{searchPass}" method="get" class="login100-form validate-form">
-			
-			
-				<div style="color: #ac2925">
-                      <div style="text-align: center;">Send temporary password by email</div>
+   <div class="container-login50" align="center">
+      <div class="wrap-login50 p-l-55 p-r-55 p-t-50 p-b-30">
+         <form th:action="@{searchPass}" method="get" class="login50-form validate-form">
+         
+         
+            <div style="color: #ac2925"><br><br><br>
+                      <div style="text-align: center;">password 찾기</div>
                     </div><br>
 
-				<div class="wrap-input100 validate-input m-b-20">
-					<input id="email" class="input100" type="text" name="email" placeholder="Please enter your email">
-					<span class="focus-input100"></span>
-				</div>
-				<div class="wrap-input100 validate-input m-b-25">
-					<input id="name" class="input100" type="text" name="name" placeholder="Please enter your name">
-					<span class="focus-input100"></span>
-				</div>
-				
-				<br>
-				<div class="container-login100-form-btn">
-					<button type="button" class="login100-form-btn" id="checkEmail">
-						Send Email
-					</button>
-				</div>
-				<div class="text-center small mt-2" id="checkMsg" style="color: red"></div>
+            <div class="wrap-input50 validate-input m-b-10">
+               <input id="email" class="input50" type="text" name="email" placeholder="email을 입력하세요">
+               <span class="focus-input50"></span><br>
+            </div>
+            <div class="wrap-input50 validate-input m-b-10">
+               <input id="name" class="input50" type="text" name="name" placeholder="이름을 입력하세요">
+               <span class="focus-input50"></span>
+            </div>
+            
+            <br>
+            <div class="container-login50-form-btn">
+               <button type="button" class="login50-form-btn" id="checkEmail">
+                  password 찾기
+               </button>
+            </div>
+            <div class="text-center small mt-2" id="checkMsg" style="color: red"></div><br><br>
 
-				<div class="text-center">
-					<a sec:authorize="isAnonymous()" th:href="@{user/login}" class="txt2 hov1">
-						Cancel
-					</a>
-				</div>
-			</form>			
-		</div>
-	</div>
-	
-	<script>
+            <div class="text-center">
+               <a sec:authorize="isAnonymous()" th:href="@{user/login}" class="txt2 hov1">
+                  Cancel
+               </a>
+            </div>
+         </form>         
+      </div>
+   </div>
+   
+   <script>
 
     $('.modal').on('hidden.bs.modal', function (e) {
         console.log('modal close');
@@ -76,10 +78,10 @@
                                     "name": name
                                 },
                                 
-								success: function (res) {
-									window.location = "/user/login";
-								}
-								
+                        success: function (res) {
+                           window.location = "/user/login";
+                        }
+                        
                             })
                             
                         }
@@ -93,11 +95,11 @@
             }
         })
     })
-</script>
-	
-	
+</script><br><br>
+   
+   
 
-	
-	<div th:insert="com/footer.html" ></div>
+   
+   <div th:insert="com/footer.html" ></div>
 </body>
 </html>
