--- a/src/main/resources/templates/will/createwill.html
+++ b/src/main/resources/templates/will/createwill.html
@@ -2,11 +2,8 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>Will : 작성</title>
+        <title>Will : 작성</title>
  <link rel='stylesheet' href='/webjars/bootstrap/4.5.0/css/bootstrap.min.css'> 
- 
-
-
 </head>
 <body>
 <header th:insert="com/header.html" ></header>
@@ -16,11 +13,9 @@
    
     <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
     		
-
-    		<br><br>
-      		 <div class="form-group row">
+            <br><br>
+               <div class="form-group row">
             <label for="inputId" class="col-sm-2 col-form-label" style="" ><strong style=" font-size:large; color:#69A8AA; font-style:italic; font-weight: bold;"><u>아이디</u></strong></label>
-
             <div  class="col-sm-2">
                 <input type="text" name="memberId" class="form-control"  id="inputId" th:value="${#authentication.name}" readonly="readonly" >
                                                                                                                    
@@ -42,8 +37,7 @@
             </div>
         </div>
         <div class="form-group row">
-            <label for="inputFile" class="col-sm-2 col-form-label"><strong style=" font-size:large; color:#69A8AA; font-style:italic; font-weight: bold;"><u>첨부 파일</u></strong></label>
-            <div class="col-sm-10">
+            <label for="inputFile" class="col-sm-2 col-form-label"><strong style=" font-size:large; color:#69A8AA; font-style:italic; font-weight: bold;"><u>첨부 파일</u></strong></label>            <div class="col-sm-10">
                 <div class="custom-file" id="inputFile">
                     <input name="file" multiple type="file" class="custom-file-input" id="customFile">
                     <label class="custom-file-label" for="customFile">파일을 선택해 주세요.</label>
@@ -67,7 +61,7 @@
         <footer th:insert="com/footer.html"></footer>
 
     </form>
-<!-- </div> -->
+</div>
 <script src="/webjars/jquery/3.5.1/jquery.min.js"></script>
 <script src="/webjars/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 <script>
