--- a/bin/main/templates/will/createwill.html
+++ b/bin/main/templates/will/createwill.html
@@ -39,7 +39,7 @@
         <div class="form-group row">
             <label for="inputFile" class="col-sm-2 col-form-label"><strong style=" font-size:large; color:#69A8AA; font-style:italic; font-weight: bold;"><u>첨부 파일</u></strong></label>            <div class="col-sm-10">
                 <div class="custom-file" id="inputFile">
-                    <input name="file" multiple type="file" class="custom-file-input" id="customFile">
+                    <input name="file" multiple="multiple" type="file" class="custom-file-input" id="customFile">
                     <label class="custom-file-label" for="customFile">파일을 선택해 주세요.</label>
                 </div>
             </div>
@@ -47,11 +47,8 @@
         <div class="row">
             <div class="col-auto mr-auto"></div>
             <div class="col-auto">
-            <a  th:href="@{will/list}" class="animationbutton"  type="button" role="button" >목록</a>
-                <!--style=" height:54px; font-weight: bold; font-size:large; text-align:center;
-                       width : 250px; background-color:#e8e8e8; border-color: gray; color:#545454;"-->
- 
-                <input class="submit2" type="submit" role="button" value="글쓰기">
+            <button onclick="location.href='http://localhost:8886/user/will/list'" class="animationbutton" role="button" >목록</button>&emsp;&nbsp;	
+            <input class="submit2" type="submit" role="button" value="글쓰기">
              
             </div>
         </div>
