--- a/bin/main/templates/com/header.html
+++ b/bin/main/templates/com/header.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+1<!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
 <meta charset="UTF-8">
@@ -19,10 +19,7 @@
         <li id="create"><a sec:authorize="hasRole('ROLE_MEMBER')" th:href="@{/user/createwill}">문서작성</a></li>
         <li id="create"><a sec:authorize="hasRole('ROLE_LAWYER')" th:href="@{/user/will/list}">문서수정</a></li>
         <li class="submenu">
-        <a href="#">Layouts</a>
-        <ul>
-            <li><a sec:authorize="isAnonymous()" th:href="@{/guidance}">절차안내</a></li>
-        </ul>
+        <li id="create"><a th:href="@{/guidance}">절차안내</a></li>
         </li>
         <li class="submenu">
         <a sec:authorize="isAnonymous()" th:href="@{/user/signup}">회원가입</a>
@@ -33,7 +30,7 @@
         <a sec:authorize="isAuthenticated()"><span sec:authentication="name"></span>님</a>
         <ul>
             <li><a sec:authorize="hasRole('ROLE_MEMBER')" th:href=" @{/user/info}">내 정보</a></li>
-            <li><a sec:authorize="hasRole('ROLE_LAWYER')" th:href=" @{/lawyer/user/info}">내 정보</a></li>
+            <li><a sec:authorize="hasRole('ROLE_LAWYER')" th:href=" @{/user/info}">내 정보</a></li>
         </ul>
         <li><a sec:authorize="isAnonymous()" th:href="@{/user/login}" class="button primary">Login</a></li>
         <li><a sec:authorize="isAuthenticated()" th:href="@{/user/logout}" class="button primary">Logout</a></li>
