--- a/bin/main/templates/info/myinfo.html
+++ b/bin/main/templates/info/myinfo.html
@@ -1,121 +1,48 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<link href="../static/css/myinfo.css" rel="stylesheet" th:href="@{/css/myinfo.css}" /> 
+
+
 
 <head>
     <meta charset="UTF-8">
-    <title>내정보</title>
+    <link href="../static/css/myinfo.css" rel="stylesheet" th:href="@{/css/myinfo.css}" /> 
+    <title>Will : 마이 페이지</title>
 </head>
 <body>
 
 <div th:insert="com/header"></div>
 
     
-    <div id="pr1" class="widget smk_sidebar_4zz4 widget_nav_menu"><h3 class="title"><span>마이페이지</span></h3><br><br>
+    <div id="pr1" class="widget smk_sidebar_4zz4 widget_nav_menu"><h3 class="title"><span></span></h3><br><br>
     
     
     
     
-    <hgroup id="pag">
-       <h1><strong> MY Page </strong></h1>
+    <hgroup id="pag" class=myinfomypage >
+    	<h5><strong> 마이 페이지 </strong></h5>
     </hgroup>
 
+		<form th:action="@{'/resignup/' + ${currentUser.no}}" method="get"  style='line-height:1em'>
+			
+			<input class=animationbutton type="submit" value="회원정보 수정"
+				th:onclick="loction.herf='@{'/resignup/update/' + ${currentUser.no}}'">
+		</form>&nbsp;
 
 
-      <div sec:authorize="hasRole('ROLE_MEMBER')">
-      <form th:action="@{'/resignup/' + ${currentUser.no}}" method="get"  style='line-height:1em'>
-         
-         <li id="pag1"><input type="submit" value="회원정보 수정"
-            th:onclick="loction.herf='@{'/resignup/update/' + ${currentUser.no}}'"></li>
-      </form>&nbsp;
-
-
-      <form th:action="@{'/repass/' + ${currentUser.no}}" method="get" style='line-height:1em'>
-         <li id="pag1"><input type="submit" value="비밀번호 변경"
-            th:onclick="loction.herf=''"></li>&nbsp;
-      </form>
-      
-      <form th:action="@{/user/QnA/list}" method="get" style='line-height:1em'>
-      <li id="pag1"><input  type="submit" value="Q&A"
-            th:onclick="loction.herf=''"></li>&nbsp;
-      </form>
-      
-      <form th:action="@{/user/will/list}" method="get" style='line-height:1em'>
-      <li id="pag1"><input  type="submit" value="진행상황 보기"
-            th:onclick="loction.herf=''"></li>&nbsp;
-      </form>
-      
-      </div>
-      
-      <div sec:authorize="hasRole('ROLE_LAWYER')">
-      <form th:action="@{'/lawyer/resignup/' + ${currentUser.no}}" method="get"  style='line-height:1em'>
-         
-         <li id="pag1"><input type="submit" value="회원정보 수정"
-            th:onclick="loction.herf='@{'/lawyer/resignup/update/' + ${currentUser.no}}'"></li>
-      </form>&nbsp;
-
-
-      <form th:action="@{'/lawyer/repass/' + ${currentUser.no}}" method="get" style='line-height:1em'>
-         <li id="pag1"><input type="submit" value="비밀번호 변경"
-            th:onclick="loction.herf=''"></li>&nbsp;
-      </form>
-      
-      <form th:action="@{/user/QnA/list}" method="get" style='line-height:1em'>
-      <li id="pag1"><input  type="submit" value="Q&A"
-            th:onclick="loction.herf=''"></li>&nbsp;
-      </form>
-      
-      <form th:action="@{/user/will/list}" method="get" style='line-height:1em'>
-      <li id="pag1"><input  type="submit" value="진행상황 보기"
-            th:onclick="loction.herf=''"></li>&nbsp;
-      </form>
-      
-      </div>
-      
-
-      <!--  <div class="w3-container" align="center">
-          <hr>
-         <form th:action="@{'/resignup/' + ${currentUser.no}}" method="get" >
-          <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"></i>회원 정보 수정</b></p>
-          <div class="w3-light-grey w3-round-xlarge">
-                <button type="submit" class="w3-2017-island-paradise w3-round-xlarge w3-hover-teal">회원 정보 수정</button>
-          </div>
-          </form>
-          <br> 
-
-         <form th:action="@{'/repass/' + ${currentUser.no}}" method="get">
-          <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"></i>비밀번호 설정변경</b></p>
-          <div class="w3-light-grey w3-round-xlarge">
-            <button type="submit" class="w3-2017-island-paradise w3-round-xlarge w3-hover-teal">비밀번호 설정변경</button>
-          </div>
-          </form>
-    -->
-   
-   
-   
-   
-
-    
-    
-    
-    
-    
-    
-    
-    
-    
+		<form th:action="@{'/repass/' + ${currentUser.no}}" method="get" style='line-height:5em'>
+		<input  class=animationbutton type="submit" value="비밀번호 변경" th:onclick="loction.herf=''">
+		</form>&nbsp;
+		
+		<form th:action="@{/user/QnA/list}" method="get" style='line-height:1em; box-sizing: 150px'>
+		<input  class=animationbutton  type="submit" value="Q&A" th:onclick="loction.herf=''">
+		</form>&nbsp;
+		
+		<form th:action="@{/user/will/list}" method="get" style='line-height:5em'>
+	<input  class=animationbutton  type="submit" value="진행상황 보기" th:onclick="loction.herf=''">
+		</form>&nbsp;
     
     </div>
     
-    <div th:insert="com/footer.html" id="footer"></div>
-    
-    
-    
-    
 </body>
 </html>
-
-
-<!-- <li id="pag" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2431"><a title="개인정보 변경" href="http://localhost:8886/user/info2">개인정보 변경</a></li>
-   <li id="pag" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2429"><a title="공증제도의 연혁" href="http://www.koreanotary.or.kr/?page_id=2378">공증제도의 연혁</a></li>
-   <li id="pag" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2428"><a title="공증인" href="http://www.koreanotary.or.kr/?page_id=2380">공증인</a></li>
-   <li id="pag" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-3612 current_page_item menu-item-has-children menu-item-3614"><a title="공증의 종류" href="http://www.koreanotary.or.kr/?page_id=3612">공증의 종류</a> -->
