--- a/bin/main/templates/will/edit.html
+++ b/bin/main/templates/will/edit.html
@@ -9,13 +9,12 @@
 <header th:insert="com/header.html"></header>
 <br><br><br>
 <div class="container">
-    <form th:action="@{'/createwill/edit/' + ${post.no}}" method="post">
-        <input type="hidden" name="_method" value="put"/>
+    <form th:action="@{'/createwill/edit/' + ${post.no}}" method="post" enctype="multipart/form-data">
         <input type="hidden" name="no" th:value="${post.no}"/>
          <div class="form-group row">
             <label for="inputTitle" class="col-sm-2 col-form-label"><strong>아이디</strong></label>
             <div class="col-sm-4">
-                <input type="text" name="id" class="form-control" id="inputTitle" th:value="${post.memberId}" readonly>
+                <input type="text" name="memberId" class="form-control" id="inputTitle" th:value="${post.memberId}" readonly>
             </div>
         </div>
         <div class="form-group row">
@@ -44,7 +43,6 @@
             <div class="col-sm-10">
                 <div class="custom-file" id="inputFile">
                     <a class="card-text" th:href="@{'/download/' + ${post.fileId}}" th:text="${file.origFilename}"></a>
-                    <a class="card-text" th:herf="@{'/edit/' + ${file.id}}"><img src="/images/xbutton.png" alt="로드불가" height="10px" width="10px"/></a>
                 </div>
                 
             </div>
