--- a/src/main/resources/templates/guidance/guidance.html
+++ b/src/main/resources/templates/guidance/guidance.html
@@ -2,161 +2,139 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
- <title>Twenty by HTML5 UP</title>
+ <title>Will : 절차안내</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link  href="../static/css/main.css" rel="stylesheet"  th:href="@{/css/main.css}" />
 		<noscript><link rel="stylesheet" href="static/css/noscript.css"  th:href="@{/css/noscript.css}"/></noscript>
-
 	</head>
-
 <body class="index is-preload">
 	<form th:action="@{/guidance}" method="post"></form>
-		<!-- <div id="page-wrapper">
-
-					Header
-				<header id="header">
-					<h1 id="logo"><a th:href="@{'/'}">Will</a></h1>
-					<nav id="nav">
-						<ul>
-							<li class="current"><a th:href="@{/}">Welcome</a></li>
-							<li class="submenu">
-								<a href="#">Layouts</a>
-								<ul>
-									<li><a href="guidance.html">절차안내</a></li>
-									<li><a href="right-sidebar.html">Right Sidebar</a></li>
-									<li><a href="no-sidebar.html">No Sidebar</a></li>
-									<li><a href="contact.html">Contact</a></li>
-								
-								</ul>
-							</li>
-							
-							
-							<li class="submenu">
-								<a sec:authorize="isAnonymous()" th:href="@{/user/signup}">회원가입</a>
-   								<a sec:authorize="hasRole('ROLE_ADMIN')" th:href="@{/uesr/admin}">어드민</a>
-							</li>&nbsp;
-
-								
-										
-
-						<a sec:authorize="hasRole('ROLE_MEMBER')" th:href="@{/user/myinfo}"><span sec:authentication="name"></span>님</a>				
-			
-
-					<li><a sec:authorize="isAnonymous()"th:href="@{/user/login}"   class="button primary">Login</a></li>
-						<li><a sec:authorize="isAuthenticated()" th:href="@{/user/logout}" class="button primary">Logout</a></li>
-						</ul>
-					</nav>
-				</header>
-
-Main
+		 <div id="page-wrapper">
+				<header th:insert="com/header.html"></header>
 				<article id="main">
-
 					<header class="special container">
-						<span class="icon solid fa-laptop"></span>
-						<h2><strong>공증에 관하여</strong></h2>
-						<p>완벽하게 전달해주기 위한 반드시 읽어야 하는 것!!</p>
+						<a th:href="@{'/'}"><img src="/images/logo.jpg" width="90px" height="80px" alt="" style=" position: absolute; top: 0px;"/></a>
+						<img src="images/law.png" width="80px" height="80px" alt="" />
+						<h2><strong>Will 절차안내</strong></h2>
 					</header>
 
-					One
+					<!-- one있던자리 -->
 						<section class="wrapper style4 container">
-
 							<div class="row gtr-150">
 								<div class="col-4 col-12-narrower">
-
-									Sidebar
 										<div class="sidebar">
 											<section>
 												<header>
-													<h3><strong>공증이란</strong></h3>
 												</header>
-												<p>중요한 거래에 관하여 증거를 만들어 둠으로써 후일 발생할 분쟁을 적은 비용으로 사전에 예방하거나, 소송 전 단계에서 권리자의 금전채권에 관한 권리실행을 신속하게 하기 위하여 공증인이 사실을 증명하여 주는 제도입니다.</p>
+												<p style="border-bottom: solid; color:cadetblue;"><h3><strong>공증이란</strong></h3></p>
 												<footer>
-													<ul class="buttons">
+												<!-- 	<ul class="buttons">
 														<li><a href="#" class="button small">Learn More</a></li>
-													</ul>
+													</ul> -->
 												</footer>
 											</section>
 
 											<section>
 												
 												<header>
-													<h3>Amet Lorem Tempus</h3>
+													<h3><strong>유언장이란</strong></h3>
 												</header>
-												<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
-												<footer>
+												
+												<!-- <footer>
 													<ul class="buttons">
 														<li><a href="#" class="button small">Learn More</a></li>
 													</ul>
-												</footer>
+												</footer> -->
 											</section>
 										</div>
 
 								</div>
 								<div class="col-8 col-12-narrower imp-narrower">
 
-									Content
 										<div class="content">
 											<section>
 												
 												<header>
-													<h3>Dolore Amet Consequat</h3>
+													<h3><!-- 제목 --></h3>
 												</header>
-												<p>Aliquam massa urna, imperdiet sit amet mi non, bibendum euismod est. Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam quam, mollis at consectetur non, malesuada quis augue. Morbi tincidunt pretium interdum. Morbi mattis elementum orci, nec dictum massa. Morbi eu faucibus massa. Aliquam massa urna, imperdiet sit amet mi non, bibendum euismod est. Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam.</p>
-												<p>Vestibulum diam quam, mollis at consectetur non, malesuada quis augue. Morbi tincidunt pretium interdum. Morbi mattis elementum orci, nec dictum porta cursus justo. Quisque ultricies lorem in ligula condimentum, et egestas turpis sagittis. Cras ac nunc urna. Nullam eget lobortis purus. Phasellus vitae tortor non est placerat tristique. Sed id sem et massa ornare pellentesque. Maecenas pharetra porta accumsan. </p>
-												<p>In vestibulum massa quis arcu lobortis tempus. Nam pretium arcu in odio vulputate luctus. Suspendisse euismod lorem eget lacinia fringilla. Sed sed felis justo. Nunc sodales elit in laoreet aliquam. Nam gravida, nisl sit amet iaculis porttitor, risus nisi rutrum metus, non hendrerit ipsum arcu tristique est.</p>
-											</section>
+												<p>중요한 거래에 관하여 증거를 만들어 둠으로써 후일 발생할 분쟁을 적은 비용으로 사전에 예방하거나, 
+												소송 전 단계에서 권리자의 금전채권에 관한 권리실행을 신속하게 하기 위하여 공증인이 사실을 증명하여 주는 제도입니다.
+												</p>
+												 </section>
+												 <p>
+										            사후를 예상하여 남겨진 이들을 위해 단독 의사표현을 기록한 내용
+                                                    유언은 유언자의 진의를 확보하기 위하여 엄격한 방식에 의하여 작성한다</p><!-- 1단락 -->
+                                                    <br>
+                                                    
+												<h3><strong>Will 절차</strong></h3>
+												<p>회원 가입 및 로그인 </p>
+												<p style="color: cadetblue;">⬇</p>
+												<p>문서 작성</p>
+												<p style="color: cadetblue;">⬇</p>
+												<p>변호사 및 증인 등록</p>
+												<p style="color: cadetblue;">⬇</p>
+												<p>전자 서명</p>
+												<p style="color: cadetblue;">⬇</p>
+												<p>스마트 컨트랙트</p>
+												<p style="border-bottom: solid; border-color:cadetblue;"></p>
+											
 										</div>
 
 								</div>
 							</div>
 						</section>
 
-					Two
+					
 						<section class="wrapper style1 container special">
 							<div class="row">
-								<div class="col-4 col-12-narrower">
+								<div class="col-4 col-12-narrower" style="background-color:aliceblue;border-top: solid; border-color:cadetblue;">
 
 									<section>
-										<header>
-											<h3>This is Something</h3>
+										<header >
+											<h3><strong>유서 작성</strong></h3>
 										</header>
-										<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
-										<footer>
+										<p>기존 종이에 쓰고 변호사와 증인등 대면 하였지만 비대면으로 전자 문서화 할 수있는 기능입니다.</p>
+										<img alt="" src="../images/digital.png" width="90px"height="90px" style="margin-top: 50px">
+										<!-- <footer>
 											<ul class="buttons">
 												<li><a href="#" class="button small">Learn More</a></li>
 											</ul>
-										</footer>
+										</footer> -->
 									</section>
 
 								</div>
-								<div class="col-4 col-12-narrower">
+								<div class="col-4 col-12-narrower"style="background-color: aliceblue;">
 
 									<section>
 										<header>
-											<h3>Also Something</h3>
+											<h3><strong>변호사/증인 등록</strong></h3>
 										</header>
-										<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
-										<footer>
+										<p>법적으로 유서에 증인을 필히 등록하여야 하는데 전자로 증인 뿐만 아니라 변호사 등록을 하여 관리 및 Q&ampA를 통한 소통이 가능한 기술입니다.</p>
+										<img alt="" src="../images/enrollment.png" width="90px"height="90px" style="margin-top: 30px">
+										<!-- <footer>
 											<ul class="buttons">
 												<li><a href="#" class="button small">Learn More</a></li>
 											</ul>
-										</footer>
+										</footer> -->
 									</section>
 
 								</div>
-								<div class="col-4 col-12-narrower">
+								<div class="col-4 col-12-narrower" style="background-color: aliceblue;border-bottom: solid; border-color:cadetblue;">
 
 									<section>
 										<header>
-											<h3>Probably Something</h3>
+											<h3><strong>전자 서명</strong></h3>
 										</header>
-										<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
-										<footer>
+										<p>기존은 종이문서에 서명 혹은 인감을 쓰였지만 전자 서명은 전자 문서에 서명을 입력시켜
+										 서명한 사람이 누구인지 확인 가능하여 위,변조 사실을 바로 알수 있는 특수 형태의 디지털 정보 기술입니다.</p>
+										 <img alt="" src="../images/elec sign.png" width="90px"height="90px">
+										<!-- <footer>
 											<ul class="buttons">
 												<li><a href="#" class="button small">Learn More</a></li>
 											</ul>
-										</footer>
+										</footer> -->
+										
 									</section>
 
 								</div>
@@ -165,9 +143,8 @@ Main
 
 				</article>
 
-			Footer
+			
 				<footer id="footer">
-
 					<ul class="icons">
 						<li><a href="#" class="icon brands circle fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="#" class="icon brands circle fa-facebook-f"><span class="label">Facebook</span></a></li>
@@ -178,8 +155,9 @@ Main
 
 					<ul class="copyright">
 						<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-					</ul>
-
+					 </ul>
+					 cons made by <a href="https://www.flaticon.com/authors/monkik" title="monkik">monkik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
+                      아이콘 제작자 <a href="https://www.flaticon.com/kr/authors/srip" title="srip">srip</a> from <a href="https://www.flaticon.com/kr/" title="Flaticon"> www.flaticon.com</a>
 				</footer>
 				
 				
@@ -193,7 +171,7 @@ Scripts
 			<script src="js/util.js"></script>
 			<script src="js/main.js"></script>
 
-			</div> -->
+			</div> 
 			
 			
 	
