--- a/src/main/resources/templates/index2.html
+++ b/src/main/resources/templates/index2.html
@@ -18,7 +18,9 @@
 		<div id="page-wrapper">
 
 					<!-- Header -->
+
 				<header th:insert="com/header.html"></header>
+
 
 
 			<!-- Banner -->
@@ -35,14 +37,16 @@
 						<header>
 							<h2>WILL</h2>
 						</header>
-						<p>그대에게 <strong>꼭 전하고</strong> 싶은
+						<p>당신이 <strong>꼭</strong> 전하고 싶은 <br>
+						이야기를 전해 드립니다.
+					 
 						<br />
-						것을 전해드립니다.
+					
 						<br />
-						by..
+						From Will
 						<footer>
 							<ul class="buttons stacked">
-								<li><a href="#main" class="button fit scrolly">공증이란</a></li>
+								<li><a href="#main" class="button fit scrolly" >공증이란</a></li>
 							</ul>
 						</footer>
 
@@ -53,33 +57,34 @@
 			<!-- Main -->
 				<article id="main">
 
-					                    <header class="special container" ><span><img alt="로드불가" src="../images/psb.png"  height="50px" width="100px"class="icon solid fa-chart-bar"></span>
-                        <!-- <span class="icon solid fa-chart-bar"> --> <!-- </span> -->
-                    
-                        <h2>우리의 법률생활에서 생기는 여러 상황을 <strong><U>공적으로 증명</U></strong> 중요한 거래에 관하여 <U><strong><br/>증거를 보전하고 권리자의 권리 실행</strong></U>을 용이하게 하기 위하여 사실을</br/> <U><strong>증명하여 주는 제도</strong></U>를 말합니다.
+					<header class="special container" ><span><img alt="로드불가" src="../images/psb.png" class="icon solid fa-chart-bar"></span>
+						<!-- <span class="icon solid fa-chart-bar"> --> <!-- </span> -->
+						
+						
+						<h2>우리의 법률생활에서 생기는 여러 상황을 <strong><U>공적으로 증명하기 위해</U></strong> 
+						중요한 거래에 관하여 <U><strong><br/>증거를 보전하고 권리자의 권리 실행</strong></U>을 용이하게 하기 위하여 사실을</br/>
+						 <U><strong>증명하여 주는 제도</strong></U>를 말합니다.
+					
 						<br />
-						</h2>
-						I decided to give it a really creative name.</h2>
-						<p>Turns out <strong>Twenty</strong> was the best I could come up with. Anyway, lame name aside,
-						<br />
-						it's minimally designed, fully responsive, built on HTML5/CSS3,
-						and, like all my stuff,
-						<br />
-						released for free under the <a href="http://html5up.net/license">Creative Commons Attribution 3.0</a> license. Have fun!</p>
+						저희는 이런 제도를 간편히 다가갈 수 있도록 도와 드립니다</p>
 					</header>
 
 					<!-- One -->
-						<section class="wrapper style2 container special-alt">
+						<section class="wrapper style2 container special-alt" style="background-color: #341B2B80">
 							<div class="row gtr-50">
 								<div class="col-8 col-12-narrower">
 
 									<header>
-										<h2>Behold the <strong>icons</strong> that visualize what you’re all about. or just take up space. your call bro.</h2>
+										<h2>우리 <strong>WILL의</strong> 간편한 제도 안내</h2>
 									</header>
-									<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu comteger ut fermentum lorem. Lorem ipsum dolor sit amet. Sed tristique purus vitae volutpat ultrices. eu elit eget commodo. Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo.</p>
+									<p>먼저 회원가입을 이용해 주세요 <br>
+									회원 가입을 완료 하셨다면 로그인을 해주시고 바로 문서 작성 서비스가 가능합니다<br>
+									작성 하신 후엔 증인 및 변호사를 등록 하실 수 있습니다 뿐만 아니라 시간 절약을 위해<br>
+									 제공되는 서비스인 Q&ampA를 통하여 소통이 가능합니다
+									 <p>자세한 절차 안내는 아래 경로에 따라 확인 해주시길 바랍니다</p>
 									<footer>
 										<ul class="buttons">
-											<li><a href="#" class="button">Find Out More</a></li>
+											<li><a href="../guidance" class="button">자세한 절차 안내</a></li>
 										</ul>
 									</footer>
 
@@ -107,9 +112,9 @@
 									<section>
 										<span class="icon solid featured fa-check"></span>
 										<header>
-											<h3>This is Something</h3>
+											<h3><strong>신뢰성</strong></h3>
 										</header>
-										<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
+										<p>블록체인 기술을 이용하여 위,변조를 방지하여 고객님께 신뢰를 드립니다.</p>
 									</section>
 
 								</div>
@@ -118,9 +123,9 @@
 									<section>
 										<span class="icon solid featured fa-check"></span>
 										<header>
-											<h3>Also Something</h3>
+											<h3><strong>전문성</strong> </h3>
 										</header>
-										<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
+										<p>유언 공증에 대한 신뢰 및 전문성을 높이기 위하여 변호사 연계에 도움을 드립니다.</p>
 									</section>
 
 								</div>
@@ -129,9 +134,9 @@
 									<section>
 										<span class="icon solid featured fa-check"></span>
 										<header>
-											<h3>Probably Something</h3>
+											<h3><strong>미래 지향성</strong></h3>
 										</header>
-										<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
+										<p>코로나 19로 인하여 대면 환경 보다는 비대면 환경에서도 신뢰할 수 있는 환경으로 바뀌는 추세에 맞춰 유언장을 작성하실 수 있도록 도움을 드립니다. </p>
 									</section>
 
 								</div>
@@ -142,29 +147,29 @@
 						<section class="wrapper style3 container special">
 
 							<header class="major">
-								<h2>Next look at this <strong>cool stuff</strong></h2>
+								<h2>저희가 보여드릴 <strong>환상의 서비스를</strog> 누려보세요.</h2>
 							</header>
 
 							<div class="row">
 								<div class="col-6 col-12-narrower">
 
 									<section>
-										<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+										<img src="images/cut off.png" width="80px" height="80px" alt="" />
 										<header>
-											<h3>A Really Fast Train</h3>
+											<h3><strong>위변조 가능성 차단</strong></h3>
 										</header>
-										<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
+										<p>블록체인 기술을 활용하여 위변조의 가능성을 차단합니다.</p>
 									</section>
 
 								</div>
 								<div class="col-6 col-12-narrower">
 
 									<section>
-										<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
+									 <img src="images/paper.png" width="80px" height="80px" alt="" /> 
 										<header>
-											<h3>An Airport Terminal</h3>
+											<h3><strong>증명서의 진위 확인</strong></h3>
 										</header>
-										<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
+										<p>이더리움 메인넷 원장에 등록된 해쉬와 현재 증명서의 해쉬를 비교하여 증명서의 진위 확인합니다.</p>
 									</section>
 
 								</div>
@@ -173,32 +178,32 @@
 								<div class="col-6 col-12-narrower">
 
 									<section>
-										<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+										 <img src="images/ethereum.png" width="80px" height="80px" alt="" /> 
 										<header>
-											<h3>Hyperspace Travel</h3>
+											<h3><strong>스마트 컨트랙트</strong></h3>
 										</header>
-										<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
+										<p>이더리움 스마트 컨트랙트를 활용하여 조건 충족 시 유언장이 공개되고 실행됩니다.</p>
 									</section>
 
 								</div>
 								<div class="col-6 col-12-narrower">
 
 									<section>
-										<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
+										<img src="images/signed.png" width="80px" height="80px" alt="" /> 
 										<header>
-											<h3>And Another Train</h3>
+											<h3><strong>전자 서명</strong></h3>
 										</header>
-										<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
+										<p>신원이 확인된 이더리움 지갑으로 전자서명을 수행하도록 하여 유언장 작성자, 변호사, 공증인이 유언장 내용에 동의하였음을 보장합니다.</p>
 									</section>
 
 								</div>
 							</div>
 
-							<footer class="major">
+							<!-- <footer class="major">
 								<ul class="buttons">
-									<li><a href="#" class="button">See More</a></li>
+									<li><a href="#" class="button">더보기</a></li>
 								</ul>
-							</footer>
+							</footer> -->
 
 						</section>
 
@@ -208,13 +213,13 @@
 				<section id="cta">
 
 					<header>
-						<h2>Ready to do <strong>something</strong>?</h2>
-						<p>Proin a ullamcorper elit, et sagittis turpis integer ut fermentum.</p>
+						<h2> 당신의 WILL을 <strong>시작해보세요</strong></h2>
+						<p>문서작성은 회원가입이 필요합니다. 회원가입 후 이용해주세요.</p>
 					</header>
 					<footer>
 						<ul class="buttons">
-							<li><a href="#" class="button primary">Take My Money</a></li>
-							<li><a href="#" class="button">LOL Wut</a></li>
+							<li><a href="../user/signup" class="button primary">회원가입</a></li>
+							<li><a href="../user/createwill" class="button">문서작성</a></li>
 						</ul>
 					</footer>
 
@@ -239,7 +244,7 @@
 
 		</div>
 
-		<!-- Scripts -->
+		<!— Scripts —>
 			<script src="js/jquery.min.js"></script>
 			<script src="js/jquery.dropotron.min.js"></script>
 			<script src="js/jquery.scrolly.min.js"></script>
